kubernetes/apps/observability/kube-prometheus-stack/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  hostnames:
  - prometheus.${SECRET_DOMAIN}
  parentRefs:
  - name: internal
    namespace: network
    sectionName: https
  rules:
  - backendRefs:
    - name: prometheus-operated
      port: 9090
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
spec:
  hostnames:
  - alertmanager.${SECRET_DOMAIN}
  parentRefs:
  - name: internal
    namespace: network
    sectionName: https
  rules:
  - backendRefs:
    - name: alertmanager-operated
      port: 9093
